<resources>
    <string name="app_name">Currency Converter</string>
    <string name="currency">Currency</string>
    <string name="dot">.</string>
    <string name="USD">USD</string>
    <string name="EU">EU</string>
    <string name="refresh">refresh</string>
    <string name="convert">Convert</string>
    <string name="contact">Contact</string>
    <string name="converter">Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="converted_amount">Converted Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>